--- a/src/app/borrar-confirmacion/borrar-confirmacion.component.html
+++ b/src/app/borrar-confirmacion/borrar-confirmacion.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Modal de confirmación</h2>
 <mat-dialog-content>
-  <p>¿Seguro que quieres borrar el producto?</p>
+  <p>¿Seguro que quieres borrar?</p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="closeDialog(false)">No</button>
